--- a/tss_styles.css
+++ b/tss_styles.css
@@ -1,6 +1,12 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css?family=Roboto');
 
+@font-face {
+    font-family: Quicksand;
+    src: url('Quicksand-Regular.woff') format('woff'),
+        url('Quicksand-Regular.ttf') format('ttf');
+}
+
+/* @import url('https://fonts.googleapis.com/css?family=Roboto'); */
 /*
    New Perspectives on HTML5 and CSS3, 7th Edition
    Tutorial 2
@@ -26,14 +32,22 @@ body {
 }
 
 /* Heading Styles */
+h1,
+h2 {
+    font-family: Quicksand, Verdana, Geneva, sans-serif;
+    letter-spacing: 0.1em;
+}
+
 h1 {
     color: white;
     background-color: rgb(222, 128, 60);
+    font-size: 2.2em;
 }
 
 h2 {
     color: white;
     background-color: rgb(235, 177, 131);
+    font-size: 1.5em;
 }
 
 article#about_tss h1 {
@@ -53,13 +67,33 @@ article.syllabus h2 {
 }
 
 /* Aside and Blockquote Styles */
+aside {
+    font-size: o.8em;
+}
+
 aside blockquote {
     color: rgb(235, 165, 116)
 }
 
 /* Navigation Styles */
+nav {
+    font-size: 0.8em;
+}
+
+nav>ul {
+    line-height: 2em;
+}
+
 /* List Styles */
 /* Footer Styles */
+body>footer address {
+    background-color: rgb(222, 128, 60);
+    color: white;
+    color: rgba(255, 255, 255, 0.7);
+    font: normal small-caps bold 0.9em/3em Quicksand, Verdana, Geneva, sans-serif;
+    text-align: center;
+}
+
 /*
 Notice for the Quicksand-Regular Font
 ------------------------------------------------------------------------------
