--- a/tss_styles.css
+++ b/tss_styles.css
@@ -1,12 +1,12 @@
 @charset "utf-8";
 
+/* @import url('https://fonts.googleapis.com/css?family=Roboto'); */
 @font-face {
     font-family: Quicksand;
     src: url('Quicksand-Regular.woff') format('woff'),
         url('Quicksand-Regular.ttf') format('ttf');
 }
 
-/* @import url('https://fonts.googleapis.com/css?family=Roboto'); */
 /*
    New Perspectives on HTML5 and CSS3, 7th Edition
    Tutorial 2
@@ -19,6 +19,9 @@
    Filename: tss_styles.css
 
 */
+/* * {
+    border: 1px solid red;
+} */
 /* HTML and Body Styles */
 html {
     background-color: hsl(27, 72%, 72%);
@@ -41,13 +44,13 @@ h2 {
 h1 {
     color: white;
     background-color: rgb(222, 128, 60);
-    font-size: 2.2em;
+    /* font-size: 2.2em; */
 }
 
 h2 {
     color: white;
     background-color: rgb(235, 177, 131);
-    font-size: 1.5em;
+    /* font-size: 1.5em; */
 }
 
 article#about_tss h1 {
@@ -68,11 +71,12 @@ article.syllabus h2 {
 
 /* Aside and Blockquote Styles */
 aside {
-    font-size: o.8em;
+    font-size: 0.8em;
 }
 
 aside blockquote {
-    color: rgb(235, 165, 116)
+    color: rgb(235, 165, 116);
+    margin: 20px 5px;
 }
 
 /* Navigation Styles */
@@ -82,9 +86,32 @@ nav {
 
 nav>ul {
     line-height: 2em;
+    list-style-type: none;
+    padding-left: 5px;
+}
+
+nav>ul>li.newgroup {
+    margin-top: 20px;
 }
 
 /* List Styles */
+article#about_tss ul {
+    list-style-image: url('runicon.png');
+    list-style-position: outside;
+}
+
+article.syllabus ol {
+    list-style-type: upper-roman;
+}
+
+article.syllabus ol ol {
+    list-style-type: upper-alpha;
+}
+
+article.syllabus ol ol ol {
+    list-style-type: decimal;
+}
+
 /* Footer Styles */
 body>footer address {
     background-color: rgb(222, 128, 60);
